# strivo

./: .env.example  .gitignore  .gitmodules  ADVERSARIAL-REVIEW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FOLLOWUP-PLUGIN-WALK.md  PLUGINS_PRIVATE.md  README.md  REVIEW.md  ROADMAP.md  SECURITY.md  YAZI-AUDIT.md  config.toml.example
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
crates/automation/: Cargo.toml
crates/automation/src/: lib.rs
crates/beat-detect/: Cargo.toml
crates/beat-detect/src/: lib.rs
crates/branding/: Cargo.toml
crates/branding/src/: lib.rs
crates/brandsafe/: Cargo.toml
crates/brandsafe/src/: lib.rs
crates/broll/: Cargo.toml
crates/broll/src/: lib.rs
crates/captions/: Cargo.toml
crates/captions/src/: lib.rs
crates/casebook/: Cargo.toml
crates/casebook/src/: lib.rs
crates/chapters/: Cargo.toml
crates/chapters/src/: lib.rs  store.rs
crates/chat/: Cargo.toml
crates/chat-density/: Cargo.toml
crates/chat-density/src/: lib.rs
crates/chat/src/: lib.rs
crates/clipper/: Cargo.toml
crates/clipper/src/: lib.rs  store.rs
crates/cuepoints/: Cargo.toml
crates/cuepoints/src/: lib.rs  store.rs
crates/deadair/: Cargo.toml
crates/deadair/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs  store.rs
crates/heatmap/: Cargo.toml
crates/heatmap/src/: lib.rs
crates/insert-fx/: Cargo.toml
crates/insert-fx/src/: lib.rs
crates/insights-compare/: Cargo.toml
crates/insights-compare/src/: lib.rs
crates/loudness/: Cargo.toml
crates/loudness/src/: lib.rs
crates/marketplace/: Cargo.toml
crates/marketplace/src/: lib.rs
crates/multistream/: Cargo.toml
crates/multistream/src/: lib.rs
crates/multitrack/: Cargo.toml
crates/multitrack/src/: lib.rs
crates/pipelines-dag/: Cargo.toml
crates/pipelines-dag/src/: lib.rs
crates/reuse/: Cargo.toml
crates/reuse/src/: lib.rs  store.rs
crates/scenes/: Cargo.toml
crates/scenes/src/: lib.rs
crates/schedule-optimizer/: Cargo.toml
crates/schedule-optimizer/src/: lib.rs
crates/strivo-bin/: Cargo.toml
crates/strivo-bin/src/: cli.rs  main.rs
crates/strivo-plugins/: Cargo.toml  README.md
crates/strivo-plugins/scripts/: whisperx_diarize.py
crates/strivo-plugins/src/: lib.rs
crates/strivo-plugins/src/archiver/: db.rs  downloader.rs  mod.rs  scanner.rs  templates.rs  types.rs
crates/strivo-plugins/src/crunchr/: analysis.rs  cost.rs  db.rs  mod.rs  pipeline.rs  presets.rs  types.rs  voice_samples.rs
crates/strivo-plugins/src/crunchr/transcribe/: mod.rs  voxtral_api.rs  voxtral_local.rs  voxtral_openrouter.rs  whisper_cli.rs  whisperx_local.rs
crates/strivo-plugins/src/editor/: concat.rs  filter.rs  mod.rs
crates/strivo-plugins/src/insights/: export.rs  frequency.rs  mod.rs  speakers.rs  topics.rs
crates/strivo-plugins/src/viewguard/: mod.rs  score.rs  stats.rs  store.rs
crates/strivo-plugins/src/viewguard/detectors/: benford.rs  mod.rs  plateau.rs  spike.rs
crates/strivo-web/: Cargo.toml  README.md
crates/strivo-web/assets/: spa.css  spa.html  spa.js  strivo.css
crates/strivo-web/assets/icons/candy/: ATTRIBUTION.md
crates/strivo-web/assets/icons/sweet-folders/: ATTRIBUTION.md
crates/strivo-web/e2e/: .gitignore  README.md  mock-server.mjs  package.json  playwright.config.ts
crates/strivo-web/e2e/tests/: smoke.spec.ts
crates/strivo-web/src/: auth.rs  csrf.rs  ipc_client.rs  lib.rs  problem.rs  server.rs
crates/strivo-web/src/routes/: api.rs  assets.rs  channels.rs  dashboard.rs  events.rs  licence.rs  login.rs  logs.rs  mod.rs  plugins.rs  recordings.rs  schedule.rs  settings.rs  system.rs  websub.rs
crates/strivo-web/templates/: _channels_list.html  _dashboard_active.html  _dashboard_cards.html  _dashboard_live.html  _recordings_list.html  _schedule_list.html  base.html  channels.html  dashboard.html  logs.html  recordings.html  schedule.html  settings.html
crates/strivo-web/tests/: routes.rs
crates/structure/: Cargo.toml
crates/structure/src/: lib.rs
crates/thumbnails/: Cargo.toml
crates/thumbnails/src/: lib.rs  store.rs
crates/vad/: Cargo.toml
crates/vad/src/: lib.rs
crates/viewguard-trend/: Cargo.toml
crates/viewguard-trend/src/: lib.rs
docs/: DAEMON.md  FIRST-RUN.md  PLUGIN-MANIFEST.md  PLUGIN-TEMPLATE.md  ROADMAP.md  YOUTUBE-LIVE-FROM-START.md
docs/demo/: demo.tape
docs/internal/: recording-dispatch-inventory.md  recording-service-api.md  speculative-crates-triage.md
docs/product/: index.md
licence-backend/: .dev.vars.example  .gitignore  README.md  package.json  schema.sql  tsconfig.json  wrangler.toml
licence-backend/src/: db.ts  env.ts  index.ts  jwt.ts  lemonsqueezy.ts  resend.ts
scripts/: install-dev.sh
src/: app.rs  cli.rs  daemon.rs  events.rs  ipc.rs  lib.rs  main.rs  search.rs  state.rs
src/config/: credentials.rs  import.rs  mod.rs
src/edl/: mod.rs  recorder.rs  render.rs
src/intents/: cookies.rs  download_vod.rs  mod.rs  spec.rs  start.rs
src/licence/: cache.rs  client.rs  gate.rs  machine_id.rs  mod.rs
src/media/: mod.rs
src/monitor/: mod.rs  patreon.rs
src/pipeline/: executor.rs  mod.rs  stage.rs
src/platform/: mod.rs  patreon.rs  twitch.rs  twitch_eventsub.rs  youtube.rs  youtube_websub.rs
src/playback/: mod.rs
src/plugin/: mod.rs  registry.rs
src/plugin/archiver/: mod.rs  render.rs  types.rs
src/plugin/crunchr/: analysis.rs  mod.rs  render.rs  types.rs
src/recording/: bulk.rs  catalog.rs  chapters.rs  ffmpeg.rs  job.rs  mod.rs  persist.rs  scan.rs  schedule.rs  segments.rs  thumbnail.rs  trash.rs  vod_backfill.rs  ytdlp.rs
src/stream/: mod.rs  resolver.rs
src/tasks/: mod.rs
src/tui/: event.rs  keymap.rs  layout.rs  log_bridge.rs  mod.rs  preview.rs  theme.rs
src/tui/theme/: kitty_import.rs  mod.rs
src/tui/widgets/: actions_popup.rs  channel_detail.rs  dialog.rs  event_log.rs  highlight.rs  log_viewer.rs  mod.rs  palette.rs  (+13 more)
tests/: config_roundtrip.rs  filename_collision.rs  ipc_handshake.rs
(+4 files in other folders)
