[workspace]
members = [".", "crates/strivo-bin"]
resolver = "2"

# strivo-plugins git-deps strivo-core; route that back to the workspace
# copy so in-tree builds use one strivo-core (no trait-identity drift).
[patch."https://github.com/Chorosyne/strivo"]
strivo-core = { path = "." }

[package]
name = "strivo-core"
version = "0.3.0"
edition = "2021"
description = "Core library for StriVo — TUI Live Stream PVR"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"
repository = "https://github.com/revelri/strivo"
homepage = "https://github.com/revelri/strivo"
readme = "README.md"
keywords = ["tui", "twitch", "youtube", "streaming", "recording"]
categories = ["command-line-utilities", "multimedia"]
rust-version = "1.75"

[lib]
path = "src/lib.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.28"
ratatui-image = "10"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "6"

# Credentials
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Notifications
notify-rust = "4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Image processing
image = "0.25"

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
libc = "0.2"
tokio-util = "0.7"
cron = "0.15"
rusqlite = { version = "0.33", features = ["bundled"] }

# Dynamic plugin loading (M5 follow-up). libloading wraps dlopen/LoadLibrary
# uniformly; consumers must compile against the exact same strivo-core build
# as the host — see docs/PLUGIN-MANIFEST.md for the same-toolchain caveat.
libloading = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = 3
