[workspace]
members = [".", "crates/strivo-bin", "crates/strivo-web", "crates/strivo-plugins", "crates/chapters", "crates/cuepoints", "crates/clipper", "crates/thumbnails", "crates/insights-compare", "crates/captions", "crates/multitrack", "crates/brandsafe", "crates/reuse", "crates/casebook", "crates/heatmap", "crates/editor", "crates/viewguard-trend", "crates/pipelines-dag", "crates/marketplace", "crates/broll", "crates/chat-density", "crates/deadair", "crates/branding", "crates/multistream", "crates/chat", "crates/loudness", "crates/structure", "crates/automation", "crates/scenes", "crates/schedule-optimizer", "crates/beat-detect", "crates/vad", "crates/sidechain", "crates/insert-fx", "crates/pitch", "crates/ab-render", "crates/submix", "crates/dataviz"]
resolver = "2"

[package]
name = "strivo-core"
version = "0.5.0"
edition = "2021"
description = "Core library for StriVo — TUI Live Stream PVR"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"
repository = "https://github.com/Chorosyne/strivo"
homepage = "https://github.com/Chorosyne/strivo"
readme = "README.md"
keywords = ["tui", "twitch", "youtube", "streaming", "recording"]
categories = ["command-line-utilities", "multimedia"]
rust-version = "1.75"

[lib]
path = "src/lib.rs"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }
# WebSocket (Twitch EventSub real-time stream.online)
tokio-tungstenite = { version = "0.24", features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "6"

# Credentials
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Licensing (machine-id hash, cache)
sha2 = "0.10"
hex = "0.4"

# Notifications
notify-rust = "4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Image processing
image = "0.25"

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
libc = "0.2"
tokio-util = "0.7"
cron = "0.16"
rusqlite = { version = "0.33", features = ["bundled"] }

# Dynamic plugin loading (M5 follow-up). libloading wraps dlopen/LoadLibrary
# uniformly; consumers must compile against the exact same strivo-core build
# as the host — see docs/PLUGIN-MANIFEST.md for the same-toolchain caveat.
libloading = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = 3
