[package]
name = "strivo-automation"
version = "0.1.0"
edition = "2021"
description = "DAW-style volume automation — time-keyed gain points → ffmpeg asendcmd/volume filter"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
