[package]
name = "strivo-beat-detect"
version = "0.1.0"
edition = "2021"
description = "Onset detection + BPM estimation from ffmpeg RMS envelopes — DAW-style tempo grid for stream montage edits"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
