[package]
name = "strivo-branding"
version = "0.1.0"
edition = "2021"
description = "Branding overlay spec (watermark + intro/outro banners) → ffmpeg filter graph"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
