[package]
name = "strivo-casebook"
version = "0.3.0"
edition = "2021"
description = "Post-stream Casebook report composer — DAW-vision iter 12"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"
publish = false
rust-version = "1.75"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
