[package]
name = "strivo-chat"
version = "0.1.0"
edition = "2021"
description = "Chat client primitives — IRC parser, emote tokenizer, filter pipeline, room ring buffer"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
