[package]
name = "strivo-clipper"
version = "0.3.0"
edition = "2021"
description = "Highlight detection + clip extraction for StriVo recordings — DAW-vision iter 5"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"
publish = false
rust-version = "1.75"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
rusqlite = { version = "0.33", features = ["bundled"] }
strivo-cuepoints = { path = "../cuepoints" }
