[package]
name = "strivo-deadair"
version = "0.3.0"
edition = "2021"
description = "Silence detection + dead-air cut suggestions — DAW-vision iter 20"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"
publish = false
rust-version = "1.75"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
