[package]
name = "strivo-heatmap"
version = "0.3.0"
edition = "2021"
description = "Multi-signal audience-retention heatmap — DAW-vision iter 13"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"
publish = false
rust-version = "1.75"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
