[package]
name = "strivo-insights-compare"
version = "0.3.0"
edition = "2021"
description = "Stream comparison + audience-retention proxy — DAW-vision iter 7"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"
publish = false
rust-version = "1.75"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
