[package]
name = "strivo-loudness"
version = "0.1.0"
edition = "2021"
description = "EBU R128 loudness normalisation — ffmpeg loudnorm two-pass parser + filter builder"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
