[package]
name = "strivo-marketplace"
version = "0.3.0"
edition = "2021"
description = "Plugin manifest spec + catalog — DAW-vision iter 17"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"
publish = false
rust-version = "1.75"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
semver = { version = "1", features = ["serde"] }
