[package]
name = "strivo-multistream"
version = "0.1.0"
edition = "2021"
description = "Multi-stream viewer — tile layout calculator + embed URL spec"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
