[package]
name = "strivo-pipelines-dag"
version = "0.3.0"
edition = "2021"
description = "Cross-plugin pipeline DAG composer — DAW-vision iter 16"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"
publish = false
rust-version = "1.75"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
