[package]
name = "strivo-schedule-optimizer"
version = "0.1.0"
edition = "2021"
description = "Publish-slot recommender — engagement samples → 7×24 grid → top weekly publish times"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
