[package]
name = "strivo-bin"
version = "0.3.0"
edition = "2021"
description = "StriVo TUI Live Stream PVR — CLI binary"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"
repository = "https://github.com/revelri/strivo"
rust-version = "1.75"

[[bin]]
name = "strivo"
path = "src/main.rs"

[dependencies]
strivo-core = { path = "../.." }
strivo-plugins = { path = "../../strivo-plugins" }

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
which = "7"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
