[package]
name = "strivo-bin"
version = "0.3.0"
edition = "2021"
description = "StriVo TUI Live Stream PVR — CLI binary"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"
repository = "https://github.com/Chorosyne/strivo"
homepage = "https://github.com/Chorosyne/strivo"
readme = "../../README.md"
keywords = ["tui", "twitch", "youtube", "streaming", "recording"]
categories = ["command-line-utilities", "multimedia"]
publish = false
rust-version = "1.75"

[[bin]]
name = "strivo"
path = "src/main.rs"

[features]
# `pro` pulls in the strivo-plugins submodule (private). Default-on so
# contributors with submodule access keep the existing flow:
#   cargo build
# Free-clone / public-fork builds drop the feature:
#   cargo build --no-default-features
# See PLUGINS_PRIVATE.md for the runbook.
default = ["pro"]
pro = ["dep:strivo-plugins", "strivo-web/pro"]

[dependencies]
strivo-core = { path = "../.." }
strivo-plugins = { git = "https://github.com/Chorosyne/strivo-plugins", branch = "main", optional = true }
strivo-web = { path = "../strivo-web", default-features = false }

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
which = "7"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
toml = "0.9"
