[package]
name = "strivo-plugins"
version = "0.3.0"
edition = "2021"
description = "First-party plugins for StriVo (Crunchr transcription, Archiver gallery, Insights, Editor, Viewguard)"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"
repository = "https://github.com/Chorosyne/strivo"
homepage = "https://github.com/Chorosyne/strivo"
readme = "README.md"
keywords = ["strivo", "plugin", "transcription", "whisper"]
categories = ["command-line-utilities", "multimedia"]
publish = false
rust-version = "1.75"

[lib]
path = "src/lib.rs"

[features]
# Semantic search backend (fastembed-rs + sqlite-vss). The UI mode toggle
# is gated on this so the stub doesn't surface to users until the backend
# lands; see ROADMAP.md M1 Phase 1 + M5 wedges.
semantic-search = []

[dependencies]
# Host types + Plugin trait. Was a `git = "..."` ref while strivo-plugins
# lived in its own repo; folded into the workspace, this is a path dep.
strivo-core = { path = "../.." }

# Shared with host
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
image = "0.25"

# Plugin-only
rusqlite = { version = "0.33", features = ["bundled"] }
rust-stemmers = "1.2"
unicode-segmentation = "1.12"
base64 = "0.22"
which = "7"
toml = "0.8"
dirs = "5"

[dev-dependencies]
tempfile = "3"
