[package]
name = "strivo-web"
version = "0.3.0"
edition = "2021"
description = "*arr-style web UI for StriVo, talking to the daemon over IPC"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"
rust-version = "1.75"

[lib]
path = "src/lib.rs"

[features]
# Mirror of strivo-bin's gate: `pro` pulls in the strivo-plugins
# submodule. Default-on so contributors with submodule access keep the
# existing build flow; free-clone builds drop the feature with
# `cargo build --no-default-features`.
default = ["pro"]
pro = ["dep:strivo-plugins"]

[dependencies]
strivo-core = { path = "../.." }
# First-party plugins: the web UI reads their on-disk SQLite DBs (read-only)
# to surface transcripts, catalogs, verdicts, and insights. Actions still go
# through the daemon over IPC (PluginRpc verb dispatch).
strivo-plugins = { git = "https://github.com/Chorosyne/strivo-plugins", branch = "main", optional = true }
strivo-chapters = { path = "../chapters" }
strivo-cuepoints = { path = "../cuepoints" }
strivo-clipper = { path = "../clipper" }
strivo-thumbnails = { path = "../thumbnails" }
strivo-insights-compare = { path = "../insights-compare" }
strivo-captions = { path = "../captions" }
strivo-multitrack = { path = "../multitrack" }
strivo-brandsafe = { path = "../brandsafe" }
strivo-reuse = { path = "../reuse" }
strivo-casebook = { path = "../casebook" }
strivo-heatmap = { path = "../heatmap" }
strivo-editor = { path = "../editor" }
strivo-viewguard-trend = { path = "../viewguard-trend" }
rusqlite = { version = "0.33", features = ["bundled"] }

# HTTP
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs"] }
hyper = "1"

# Templates
askama = "0.12"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Embedded assets
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

# Misc
anyhow = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
futures = "0.3"
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
cron = "0.15"

# W3: cookie session HMAC
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
chrono = { version = "0.4" }
