[package]
name = "strivo-structure"
version = "0.1.0"
edition = "2021"
description = "Section labeler — intro/gameplay/break/outro classification from chapters + chat density + cuepoints"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
